<resources>
    <string name="app_name">cocktail-bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageViewEmptyList" />
    <string name="text_title_my_cocktails">My Cocktails</string>
    <string name="arrow_image_view" />
    <string name="optional_field">Optional field</string>
    <string name="add_cocktail_title">Title</string>
    <string name="add_cocktail_description">Description</string>
    <string name="add_cocktail_recipe">Recipe</string>
    <string name="add_cocktails_ingredient">Ingredient</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add_title">Add title</string>
    <string name="button_add">Add</string>
    <string name="add_your_first_cocktail_here">Add your first cocktail here</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="permission_denited">Permission denited</string>
</resources>