<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.my_cocktails.MyCocktailsFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewEmptyList"
        android:contentDescription="@string/imageViewEmptyList"
        android:src="@drawable/my_categories_empty_drawable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:text="@string/text_title_my_cocktails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewEmptyList"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/add_cocktail_textview"
        android:text="@string/add_your_first_cocktail_here"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/arrow"
        android:contentDescription="@string/arrow_image_view"
        android:src="@drawable/arrow_drawable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_cocktail_textview"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCocktails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:itemCount="16"
        tools:listitem="@layout/cocktail_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/imageButtonAddCocktails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom ="32dp"
        android:layout_gravity="center"
        android:src="@drawable/button_add_cocktail_drawable"
        android:background="@drawable/round_corner_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>